tests/errors/erro_sintatico_expr.lua
function void main()
    -- Expressão inválida: dois operadores seguidos sem operando entre eles
    local x : integer = 1 + * 2; 
end
